<resources>
    <string name="app_name">LFP</string>
    <string name="personal_info">个人信息</string>
    <!--登录注册界面-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="editUserPhone">请输入手机号(用以验证和改密)</string>
    <string name="editUserName">请输入用户名</string>
    <string name="editPassword">请输入密码</string>
    <string name="editPassword2">请确认密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="rememberPwn">记住密码</string>
    <string name="loginTitle">图片分发</string>
    <string name="registerNewUser">注册新用户</string>
    <string name="cancel">取消</string>
    <string name="NewUser">注册新用户</string>
    <string name="editYZM">请输入验证码</string>
    <string name="getYZM">获取验证码</string>
    <string name="YZ">确认</string>

    <!--图片弹出框-->
    <string name="editTag">输入标签</string>
    <string name="skip">跳过</string>
    <string name="submit">提交</string>
    <string name="area">区域</string>
    <string name="tips">选择输入标签或者选择标签</string>
    <string name="choose">已有标签</string>
    <string name="nonetags">没有标签</string>

    <!--图片侧拉框-->
    <string name="person">个人信息</string>
    <string name="record">历史记录</string>
    <string name="quit">退出登录</string>

    <!--个人信息-->
    <string name="UID">UID</string>
    <string name="username">用户名</string>
    <string name="phone">手机号</string>
    <string name="email">邮箱</string>
    <string name="hobby">兴趣爱好</string>
    <string name="changeMM">修改说明：点击右上角修改按钮，在弹出框中输入要修改的内容项，可不填。修改完成后点击完成提交修改</string>
    <string name="signnature">个性签名</string>
    <!--历史记录-->
    <string name="pictureID">PID:</string>
    <string name="name">图片名称:</string>
    <string name="myLabel">我的标签:</string>
    <string name="isAccepted">是否接受:</string>
    <string name="time">标注时间:</string>
    <string name="change">修改</string>
    <string name="complete">完成</string>
    <string name="refresh">刷新</string>
    <string name="Submit">提 交</string>
    <string name="Yes">确定</string>
    <string name="No">取消</string>
    <string name="changeTag">修改标签</string>
    <string name="LOADING">正在加载图片，这可能需要一段时间，请稍后</string>
    <string name="Score">我的积分</string>
    <string name="process">任务进度</string>
    <string name="editUserInfo">修改用户信息</string>
    <string name="cem">修改用户邮箱（可不填）</string>
    <string name="cnb">修改用户爱好（可不填）</string>
    <string name="cmm">修改密码（可不填）</string>

</resources>
