<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              tools:context="valderfields.rjb_1.view.activity.PersonalActivity">
    <LinearLayout style="@style/wrap_layout" >
        <!-- 上圆角-->
        <LinearLayout style="@style/top_layout">
            <TextView style="@style/usertext" android:text="@string/UID" />
            <TextView style="@style/usercontext" android:id="@+id/uid" />
        </LinearLayout>

        <!-- 分割线 -->
        <View style="@style/bg_line"/>
        <!-- 用户名-->
        <LinearLayout
            style="@style/mid_layout">
            <TextView style="@style/usertext" android:text="@string/username" />
            <TextView style="@style/usercontext" android:id="@+id/i_name" />
        </LinearLayout>
        <View style="@style/bg_line"/>

        <LinearLayout
            style="@style/mid_layout">
            <TextView style="@style/usertext" android:text="@string/phone" />
            <TextView style="@style/usercontext" android:id="@+id/i_phone" />
        </LinearLayout>
        <View style="@style/bg_line"/>
        <!-- 下圆角-->
        <LinearLayout style="@style/bottom_layout" android:id="@+id/cem">
            <TextView style="@style/usertext" android:text="@string/email" />
            <TextView style="@style/usercontext" android:id="@+id/i_email" />
        </LinearLayout>

    </LinearLayout>


    <!-- 全圆角-->
    <LinearLayout
        style="@style/wrap_layout"
        android:id="@+id/chb">
        <LinearLayout style="@style/single_layout">
            <TextView style="@style/usertext" android:text="@string/hobby" />
            <TextView style="@style/usercontext" android:id="@+id/i_hobby" />
        </LinearLayout>

    </LinearLayout>

    <!-- 全圆角-->
    <LinearLayout
        style="@style/wrap_layout"
        android:id="@+id/cmm">
        <LinearLayout style="@style/single_layout">
            <TextView style="@style/intro" android:text="@string/changeMM" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
