<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="valderfields.rjb_1.LoginActivity">

    <LinearLayout
        android:id="@+id/user_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--用户名-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:inputType="text"
                android:hint="@string/editUserName"/>

        </android.support.design.widget.TextInputLayout>
        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/editPassword"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/rempwn"
                android:text="@string/rememberPwn" />

            <CheckBox
                android:text="@string/autoLogin"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/autologin" />

        </LinearLayout>

    <Button
        android:id="@+id/dl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="18sp"
        android:background="@drawable/circle_button"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    <Button
        android:id="@+id/zc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="@drawable/circle_button"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"/>

    </LinearLayout>

</RelativeLayout>
