<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <!--输入标签-->
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editTag"
            android:inputType="text" />

    </android.support.design.widget.TextInputLayout>

    <!--选择标签-->
    <LinearLayout
        android:id="@+id/TagArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


    </LinearLayout>

    <!--底部按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/skip"
            android:padding="15dp"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/circle_button"
            android:text="@string/submit"
            android:padding="15dp"/>

    </LinearLayout>

</LinearLayout>