<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="valderfields.rjb_1.RegisterActivity">
    <LinearLayout
        android:id="@+id/user_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--用户名-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username_register"
                android:inputType="text"
                android:hint="@string/editUserName"/>

        </android.support.design.widget.TextInputLayout>
        <!--提示信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmMessage1"
            android:visibility="gone"/>
        <!--密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_register"
                android:inputType="textPassword"
                android:hint="@string/editPassword"/>

        </android.support.design.widget.TextInputLayout>
        <!--提示信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmMessage2"
            android:visibility="gone"/>
        <!--确认密码-->
        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password_reedit"
                android:inputType="textPassword"
                android:hint="@string/editPassword2"/>

        </android.support.design.widget.TextInputLayout>
        <!--提示信息-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirmMessage3"
            android:visibility="gone"/>
        <!--注册-->
        <Button
            android:id="@+id/ZC"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:background="@drawable/circle_button"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

    </LinearLayout>
</RelativeLayout>
