<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:id="@+id/first">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pictureID"
                android:textColor="@color/userTextColor"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/pictureUID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="1"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/userTextColor"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/pictName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.jpg"
                android:textStyle="italic"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/myLabel"
                android:textColor="@color/userTextColor"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="水杯"
                android:textStyle="italic"
                android:textSize="16sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isAccepted"
                android:textColor="@color/userTextColor"
                android:textStyle="bold"
                android:textSize="18sp"/>

            <TextView
                android:layout_marginStart="10dp"
                android:id="@+id/isAccept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="否"
                android:textStyle="italic"
                android:textSize="16sp"/>

        </LinearLayout>



    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textColor="@color/userTextColor"
                    android:textStyle="bold"
                    android:textSize="18sp"/>

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2017-6-24"
                    android:textStyle="italic"
                    android:textSize="16sp"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>